* Level:
	- TryPlaceRoom(AtDoor) no longer plays the key unlock sound if a room is created that connects to the player's current room.
* ImGui:
	- Adding an element with the same id as an existing one will now replace the existing element instead of throwing an error.
	- If an error is caused by a callback, imgui will now properly throw an error
Fixes:
* ImGui:
	- Fixed RemoveElement not working on elements created with AddInputColor.
	- Fixed Render callbacks of window elements being executed even if the window is not visible
	- Fixed ImGui closing unexpectedly when pressing enter and the console window is not enabled
	- Fixed ImGui.ImGuiToWorld() and ImGui.WorldToImGui() calls not taking the position arguments as intended
* Pathfinder:
	- Many methods that did not work properly have been fixed
	- Use Entity[Familiar/NPC]:GetPathfinder to access these fixes
	- (EntityNPC.Pathfinder has been left unaffected for existing mod compatibility)
* Misc:
	- Modded characters locked behind achievements no longer appear in the local co-op wheel.
/newline/
/versionseparator/
v1.0.12.b -
Fixes:
* Fix various regressions involving status effects introduced by 1.0.12
/newline/
/versionseparator/
v1.0.12.a -
* The changelogs menu has been revamped. Use the left and right arrow keys to look between versions.
Additions:
* Ambush:
	- [Get/Set]MaxBossChallengeWaves()
	- Allows changing the number of waves in a boss challenge room
Fixes:
* Boss challenge rooms wave count no longer accidentally tied to normal challenge room wave count (ie, now two instead of three)
/newline/
/versionseparator/
v1.0.12 -
Additions:
* Add new Vanilla Tweaks option "Console Autofill Limit", which determines the number of autocomplete items that are displayed in the debug console.
* Level:
	- CanPlaceRoom(RoomConfigRoom, int GridIndex, int Dimension = -1, bool AllowMultipleDoors = true, bool AllowSpecialNeighbors = false, bool AllowNoNeighbors = false)