@@ -5,6 +5,7 @@ namespace ASMPatches {
 	bool FixTearDetonatorEntityList();
 	bool FixHushFXVeins();
 	bool SkipArchiveChecksums();
+	bool LeaderboarEntryCheckerUpdate();
 
 	namespace BerserkSpiritShacklesCrash {
 		bool Patch();
