@@ -60,6 +60,7 @@ Modified:
 * ImGui:
 	- Adding an element with the same id as an existing one will now replace the existing element instead of throwing an error.
 	- If an error is caused by a callback, imgui will now properly throw an error
+* Vanilla daily run leaderboard will now mark the submitted run entry with a transparent color if the run was cheated.
 Fixes:
 * ImGui:
 	- Fixed RemoveElement not working on elements created with AddInputColor.
